kubernetes/auth/ory/self-service-sofi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: self-service-ui
  name: self-service-ui
  namespace: ory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: self-service-ui
  template:
    metadata:
      labels:
        app: self-service-ui
    spec:
      containers:
        - image: sekvensanalyseplatform/auth-selfservice-ui:431
          name: auth-selfservice-ui
          ports:
            - containerPort: 3000
status: {}
