kubernetes/auth/ory/self-service-sofi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: ory
spec:
  rules:
    - host: test.mischa.dk
      http:
        paths:
          - backend:
              service:
                name: self-service-ui
                port:
                  number: 3000
            path: /ss/
            pathType: Prefix
  ingressClassName: traefik
status:
  loadBalancer: {}
